AG-12437 - Fix child prop names layout bug, improve prop name link styling

--- a/external/ag-website-shared/src/components/reference-documentation/ApiReference.module.scss
+++ b/external/ag-website-shared/src/components/reference-documentation/ApiReference.module.scss
@@ -143,24 +143,34 @@
 }
 
 .name {
-    -webkit-font-smoothing: antialiased;
-    -moz-osx-font-smoothing: grayscale;
     --parent-properties-color: var(--color-fg-secondary);
     --parent-properties-font-weight: var(--text-regular);
 
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+
     position: relative;
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    gap: $spacing-size-3;
-    margin-top: 0;
-    margin-bottom: 0;
     padding-right: $spacing-size-2;
     font-family: var(--text-monospace-font-family);
     font-size: 15px;
     line-height: var(--text-lh-xs);
     font-weight: 700;
     color: var(--color-fg-primary);
+
+    &:hover .linkIcon {
+        opacity: 0.5;
+    }
+
+    .linkIcon {
+        &:hover {
+            opacity: 1;
+        }
+
+        svg {
+            width: $spacing-size-4;
+            height: $spacing-size-4;
+        }
+    }
 
     @container (min-width: #{$breakpoint-table-small}) {
         font-size: 15px;
